today's reservation attendees are made

--- a/src/app/components/edit-reservation/edit-reservation.component.html
+++ b/src/app/components/edit-reservation/edit-reservation.component.html
@@ -46,7 +46,7 @@
                 {{room.name}}
               </option>
             </select>
-<!--            <pre>{{editReservationForm.value | json}}</pre>-->
+            <pre>{{editReservationForm.value | json}}</pre>
           </div>
           <!--                    <input type="hidden" id="reservationHost" name="reservationHost" formControlName="host" value="{{reservation?.host}}">-->
           <!--           host remaining unchanged-->
