--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,4 +22,8 @@
       <!--      </li>-->
     </ul>
   </div>
+  <div>
+    <a routerLink="login" class="btn btn-primary">Login</a>
+<!--    <a routerLink="login" class="btn btn-danger">LogOut</a>-->
+  </div>
 </nav>
