--- a/src/app/components/room-item/room-item.component.html
+++ b/src/app/components/room-item/room-item.component.html
@@ -2,20 +2,22 @@
   <div class="card">
     <h1 class="card-header">Room #{{room?.id}}
       <fa-icon
-        (click)="showEditModalToggle()"
-        [ngStyle]="{'color':'#000','float':'right', 'margin':'0px 10px'}"
-        [icon]="faPencil"
-        class="pointer">
-      </fa-icon>
-      <fa-icon
+        *ngIf="notAdmin"
         (click)="onDelete(room)"
-        [ngStyle]="{'color':'#f00','float':'right'}"
+        [ngStyle]="{'color':'#f00','float':'right', 'margin':'0px 10px'}"
         [icon]="faDelete"
         class="pointer">
       </fa-icon>
       <fa-icon
+        *ngIf="notAdmin"
+        (click)="showEditModalToggle()"
+        [ngStyle]="{'color':'#0f0','float':'right', 'margin':'0px 10px'}"
+        [icon]="faPencil"
+        class="pointer">
+      </fa-icon>
+      <fa-icon
         (click)="showModalToggle(room)"
-        [ngStyle]="{'color':'#000','float':'right', 'margin':'0px 10px'}"
+        [ngStyle]="{'color':'#f0f','float':'right', 'margin':'0px 10px'}"
         [icon]="faEye"
         class="pointer">
       </fa-icon>
