--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <h1 class="card-header">{{reservation?.name}}
       <fa-icon
-        *ngIf="notAdmin"
+        *ngIf="currentUser"
         (click)="deleteReservation(reservation)"
         [ngStyle]="{'color':'#f00','float':'right', 'margin':'0px 10px'}"
         [icon]="faDelete"
@@ -15,7 +15,7 @@
         class="pointer">
       </fa-icon>
       <fa-icon
-        *ngIf="notAdmin"
+        *ngIf="currentUser"
         (click)="showEditModalToggle(reservation)"
         [ngStyle]="{'color':'#0f0','float':'right', 'margin':'0px 10px'}"
         [icon]="faPen"
