--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5">
   <button class="btn btn-outline-success text-center"
+          *ngIf="currentUser"
           (click)="toggleInsertReservationModal()"
   >Add new reservation here!</button>
 </div>
