--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5">
 <button class="btn btn-outline-success"
+        *ngIf="currentUser"
         (click)="toggleInsertRoomModal()"
 >Add new room here!</button>
 </div>
