--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -2,14 +2,14 @@
   <div class="card">
     <h1 class="card-header">{{user?.firstName}} {{user?.lastName}}
       <fa-icon
-        *ngIf="notAdmin"
+        *ngIf="currentUser"
         (click)="onDelete(user)"
         [ngStyle]="{'color':'#f00','float':'right', 'margin':'0px 10px'}"
         [icon]="faDelete"
         class="pointer">
       </fa-icon>
       <fa-icon
-        *ngIf="notAdmin"
+        *ngIf="currentUser"
         (click)="showEditModalToggle()"
         [ngStyle]="{'color':'#0f0','float':'right', 'margin':'0px 10px'}"
         [icon]="faPencil"
