--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link btn-outline-info rounded-3" routerLink="#">Home</a>
+        <a class="nav-link btn-outline-info rounded-3" routerLink="">Home</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link btn-outline-info rounded-3" routerLink="/dashboard/user">Users</a>
