--- a/src/app/components/reservation-attendee/reservation-attendee.component.html
+++ b/src/app/components/reservation-attendee/reservation-attendee.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header insert-new-itemmodal-normal-header">
-        <h1>Attendees on the meeting</h1>
+        <h1>Attendees on the meeting for reservation {{reservation?.id}}</h1>
         <button type="button"
                 class="btn-close move-right"
                 id="close-button-new"
@@ -30,6 +30,9 @@
         </table>
       </div>
       <div class="modal-footer">
+        <app-attendees-autocomplete></app-attendees-autocomplete>
+
+        <button class="btn btn-success" (click)="showAttendeesList()">Add new attendee</button>
         <button class="btn btn-danger" (click)="onClose()">Close</button>
       </div>
     </div>
