attendees are started

--- a/src/app/components/attendees-autocomplete/attendees-autocomplete.component.html
+++ b/src/app/components/attendees-autocomplete/attendees-autocomplete.component.html
@@ -5,4 +5,5 @@
         {{user?.firstName}} {{user?.lastName}}
       </mat-option>
     </mat-autocomplete>
+<!--  <pre>{{attendee.value | json}}</pre>-->
 </form>
