--- a/src/styles.css
+++ b/src/styles.css
@@ -89,7 +89,29 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .search-toggled{
   background-color: #198754;
   color:#fff;
+}
 
+.duration-div{
+  border: 4px solid;
+  padding: 10px 0;
+  margin:20px 3px;
+  display: flex;
+  justify-content: space-around;
+}
+.duration-border{
+  border-image:
+    linear-gradient(
+      to right, #198754 0%, #dc3545 100%
+    ) 100% 0 100% 0;
+}
+
+.filter-submit-section{
+  display:flex;
+  justify-content: center
+}
+
+.filter-submit-section button{
+  margin:0 20px;
 }
 
 
