Adapted names for started and finished with the back end part of the project.

--- a/src/app/components/home-item/home-item.component.html
+++ b/src/app/components/home-item/home-item.component.html
@@ -14,12 +14,12 @@
           [icon]="faClock"
         >
         </fa-icon>
-        {{reservation?.startedAt}}<br>
+        {{reservation?.started_at}}<br>
         <fa-icon
           [icon]="faClock"
         >
         </fa-icon>
-        {{reservation?.finishedAt}}
+        {{reservation?.finished_at}}
       </h3>
       <p class="card-text">{{reservation?.status}}</p>
     </div>
