--- a/src/app/components/modal-reservation/modal-reservation.component.html
+++ b/src/app/components/modal-reservation/modal-reservation.component.html
@@ -9,10 +9,10 @@
       </div>
       <div class="modal-body">
         <p>
-          <fa-icon [icon]="faClock"></fa-icon> {{reservation?.startedAt}}
+          <fa-icon [icon]="faClock"></fa-icon> {{reservation?.started_at}}
         </p>
         <p>
-          <fa-icon [icon]="faClock"></fa-icon> {{reservation?.finishedAt}}
+          <fa-icon [icon]="faClock"></fa-icon> {{reservation?.finished_at}}
         </p>
         <p>
           {{reservation?.status}}
