--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -32,9 +32,9 @@
       <h3>room: {{reservation?.room?.name}}</h3>
       <h2 class="card-title">
         <fa-icon [icon]="faClock"></fa-icon>
-          {{reservation?.startedAt}}<br>
+          {{reservation?.started_at}}<br>
         <fa-icon [icon]="faClock"></fa-icon>
-          {{reservation?.finishedAt}}
+          {{reservation?.finished_at}}
       </h2>
       <p class="card-text">{{reservation?.status}}</p>
       <h3 class="card-text">Host email: {{reservation?.host?.email}}</h3>
