--- a/src/styles.css
+++ b/src/styles.css
@@ -74,10 +74,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 10px;
 }
 
-.search-reservation{
+.search-section{
   border:1px solid #a19c9c;
   border-radius: 10px;
   padding: 10px;
+  background-color: #F0EEE6;
 }
 
 #h4-reservation-search{
@@ -92,26 +93,39 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .duration-div{
-  border: 4px solid;
+  /*border: 4px solid;*/
+  border-radius: 10px;
   padding: 10px 0;
   margin:20px 3px;
   display: flex;
   justify-content: space-around;
 }
-.duration-border{
-  border-image:
-    linear-gradient(
-      to right, #198754 0%, #dc3545 100%
-    ) 100% 0 100% 0;
+.duration-bg{
+  background: linear-gradient(90deg, rgba(22,147,89,1) 0%, rgba(220,53,69,1) 100%);
+}
+
+.duration-item{
+  display: flex;
+  justify-content: center;
 }
 
 .filter-submit-section{
   display:flex;
-  justify-content: center
+  justify-content: center;
 }
 
 .filter-submit-section button{
   margin:0 20px;
+}
+
+.search-form *{
+  margin:5px;
+  padding: 10px;
+}
+
+.clear-filters-button{
+  background-color: #fca503;
+  color:#fff;
 }
 
 
