--- a/src/app/components/search-user/search-user.component.html
+++ b/src/app/components/search-user/search-user.component.html
@@ -1,6 +1,30 @@
 <div class="container-lg mt-5 search-section">
   <form (ngSubmit)="onSubmit()" [formGroup]="searchUserForm" class="search-form">
-
+    <div>
+    <div class="form-group rounded-5">
+      <label for="userEmail">Email:</label>
+      <input type="email" name="userEmail" id="userEmail"
+             formControlName="email" class="form-control">
+    </div>
+    <div class="form-group rounded-5">
+      <label for="userFirstName">First Name:</label>
+      <input type="text" name="userFirstName" id="userFirstName"
+             formControlName="firstName" class="form-control">
+    </div>
+    <div class="form-group rounded-5">
+      <label for="userLastName">Last Name:</label>
+      <input type="text" name="userLastName" id="userLastName"
+             formControlName="lastName" class="form-control">
+    </div>
+    <div class="form-group rounded-5">
+      <label for="userPhone">Phone:</label>
+      <input type="text" name="userPhone" id="userPhone"
+             formControlName="phone" class="form-control">
+    </div>
+    </div>
+    <!--          <div>-->
+    <!--            {{editReservationForm.value|json}}-->
+    <!--          </div>-->
     <div class="filter-submit-section">
       <button type="submit" class="btn btn-success">
         Search!
