Attendees page is made.

--- a/src/app/components/reservation-attendee/reservation-attendee.component.html
+++ b/src/app/components/reservation-attendee/reservation-attendee.component.html
@@ -30,9 +30,8 @@
         </table>
       </div>
       <div class="modal-footer">
-        <app-attendees-autocomplete></app-attendees-autocomplete>
-
-        <button class="btn btn-success" (click)="showAttendeesList()">Add new attendee</button>
+<!--        <app-attendees-autocomplete></app-attendees-autocomplete>-->
+<!--        <button class="btn btn-success" (click)="showAttendeesList()">Add new attendee</button>-->
         <button class="btn btn-danger" (click)="onClose()">Close</button>
       </div>
     </div>
