--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -23,8 +23,9 @@
   (deleteReservationTask)="deleteReservationById(reservation)"
   (onShowModal)="onModalToggle($event)"
   (onShowEditModal)="onEditModalToggle(reservation)"
-  (onShowAttendeesToggle)="toggleAttendeesModal($event)"
->
+  (onShowAttendeesToggle)="toggleAttendeesModal($event)">
+<!--  (onShowAttendeesPage)="openAttendeesPage($event)"-->
+
 </app-reservation-item>
 
 <app-modal-reservation
