--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -15,6 +15,15 @@
         class="pointer">
       </fa-icon>
       <fa-icon
+        [icon]="faAddAttendee"
+        [ngStyle]="{'color':'#e7c492','float':'right', 'margin':'0px 10px'}"
+        class="pointer"
+        (click)="openAddAttendeePage()"
+        routerLink="/dashboard/attendees"
+      >
+
+      </fa-icon>
+      <fa-icon
         *ngIf="currentUser"
         (click)="showEditModalToggle(reservation)"
         [ngStyle]="{'color':'#0f0','float':'right', 'margin':'0px 10px'}"
