Coming attendees are done on attendees page with queryParams.

--- a/src/app/components/attendees/attendees.component.html
+++ b/src/app/components/attendees/attendees.component.html
@@ -10,3 +10,8 @@
   *ngIf="searchAttendeeComponentVisible"
 >
 </app-search-user>
+
+<app-attendee-item
+*ngFor="let attendee of attendees"
+[attendee]="attendee"
+></app-attendee-item>
