Pending attendee done.

--- a/src/app/components/attendees/attendees.component.html
+++ b/src/app/components/attendees/attendees.component.html
@@ -1,18 +1,21 @@
 <div class="container mt-5">
 
   <button class="btn btn-outline-success text-center make-some-space"
-    (click)="toggleAttendeeSearchComponent()"
-    [ngClass]="searchAttendeeComponentVisible?'search-toggled':'btn-outline-success'"
-   >Filters
+          (click)="toggleAttendeeSearchComponent()"
+          [ngClass]="searchAttendeeComponentVisible?'search-toggled':'btn-outline-success'"
+  >Filters
   </button>
 </div>
 <app-search-user
   *ngIf="searchAttendeeComponentVisible"
-
 >
 </app-search-user>
 
 <app-attendee-item
-*ngFor="let attendee of attendees"
-[attendee]="attendee"
+  *ngFor="let attendee of attendees"
+  [attendee]="attendee"
 ></app-attendee-item>
+<app-pending-attendee
+  *ngFor="let pendingAttendee of pendingAttendees"
+  [pendingAttendee]="pendingAttendee"
+></app-pending-attendee>
